# Blurp

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  docker-compose.yml  entrypoint.sh  log_conf.yaml  make_migrations.sh  migrate.sh  piccolo_conf.py  pyproject.toml  requirements.txt
.github/workflows/: push.yml
docker/web/: Dockerfile  entrypoint.sh
home/: endpoints.py  exception_handlers.py  tables.py
home/controllers/: __init__.py  login_controller.py  logout_controller.py  password_controller.py
home/middleware/: __init__.py  ensure_auth.py
home/piccolo_migrations/: home_2024_03_16t15_56_25_415721.py  home_2024_03_16t16_02_53_537154.py  home_2024_03_16t16_11_59_351292.py  home_2025_02_12t20_42_46_801734.py  home_2025_02_12t23_08_49_600905.py
home/templates/: alerts.jinja  base.html.jinja  base.jinja  home.html.jinja  home.jinja  request.html.jinja  request.jinja  sidebar.jinja
home/templates/auth/: change_password.jinja  forgot_password.jinja  login.jinja  logout.jinja
home/util/: __init__.py  flash.py  headers.py
static/: main.css
