[project]
name = "blurp"
version = "1.0.0"
description = "A simple request logger for SSRF purposes :P"
authors = [{ name = "skelmis", email = "skelmis.craft@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "piccolo[all]>=1.22.0,<2",
    "litestar[cryptography]>=2.14.0,<3",
    "skelmis-commons>=1.4.0,<2",
    "piccolo-api>=1.5.2,<2",
    "piccolo-admin>=1.9.1,<2",
    "python-dotenv>=1.0.1,<2",
    "orjson>=3.10.15,<4",
    "humanize>=4.11.0,<5",
]

[dependency-groups]
dev = ["black>=25.1.0,<26"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
